--- a/Vehicles2/Vehicles2/README
+++ b/Vehicles2/Vehicles2/README
@@ -1,3 +1,4 @@
 This is a program for my c++ class, practicing inheritance and using overloaded ostreams. 
 It takes a object of the vehicle class, and a person's name to create a Person object.
 it then returns what is in each value
+The Truck class is inherited from the Vehicle class
